[gd_scene load_steps=20 format=3 uid="uid://d11lim1u2e24i"]

[ext_resource type="Script" uid="uid://be8i7rv0xfrr8" path="res://gameplay-scene/game-logic.gd" id="1_n2enm"]
[ext_resource type="Texture2D" uid="uid://bbisiq2oftokt" path="res://assets/images/background3.png" id="2_1jfn3"]
[ext_resource type="Texture2D" uid="uid://6gukv6mwhmwh" path="res://assets/images/cards_alternatives/card_back_pix.png" id="2_387hk"]
[ext_resource type="FontFile" uid="uid://cpwm7d3lrhrkk" path="res://assets/PixelifySans-Regular.ttf" id="2_dl2ym"]
[ext_resource type="FontFile" uid="uid://ddmd7pp0hamna" path="res://assets/PublicPixel.ttf" id="2_sviuc"]
[ext_resource type="Script" path="res://gameplay-scene/GameNum.gd" id="4_fqy1j"]
[ext_resource type="LabelSettings" uid="uid://y0n1omgt4mxo" path="res://assets/new_label_settings.tres" id="4_kegfm"]
[ext_resource type="Script" path="res://gameplay-scene/wins.gd" id="5_k58ic"]
[ext_resource type="Texture2D" uid="uid://m25mx7arqiyr" path="res://assets/images/arrow.png" id="6_e65rd"]
[ext_resource type="Script" path="res://gameplay-scene/losses.gd" id="6_mnx84"]
[ext_resource type="Script" path="res://gameplay-scene/ties.gd" id="7_21bi7"]
[ext_resource type="Script" path="res://gameplay-scene/bank.gd" id="8_bwecg"]
[ext_resource type="Texture2D" uid="uid://cgh5agpq8gigh" path="res://assets/images/girlll2.png" id="8_m3mv0"]
[ext_resource type="Script" path="res://gameplay-scene/arrow.gd" id="13_mnx84"]

[sub_resource type="LabelSettings" id="LabelSettings_kegfm"]
font_size = 40
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.5921569)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_bwecg"]
font_size = 42
shadow_color = Color(0, 0, 0, 0.5568628)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_m3mv0"]
font_size = 36
shadow_color = Color(0, 0, 0, 0.5176471)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_387hk"]
font_size = 40
shadow_color = Color(0, 0, 0, 0.6117647)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_e65rd"]
font = ExtResource("2_sviuc")
font_size = 55
shadow_color = Color(0, 0, 0, 0.6039216)
shadow_offset = Vector2(4, 4)

[node name="Gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2enm")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 6
z_as_relative = false
texture_filter = 1
layout_mode = 0
offset_left = 1564.0
offset_top = 661.0
offset_right = 2073.0
offset_bottom = 1387.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_387hk")

[node name="Shadow" type="ColorRect" parent="TextureRect"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = -44.0
offset_top = 28.0
offset_right = 480.0
offset_bottom = 764.0
mouse_filter = 2
color = Color(0.3019608, 0.34117648, 0.4, 1)

[node name="Shadow" type="ColorRect" parent="TextureRect/Shadow"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = 86.0
offset_top = -28.0
offset_right = 592.0
offset_bottom = 736.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="LeftMenuBar" type="ColorRect" parent="."]
show_behind_parent = true
z_index = 1
layout_mode = 0
offset_left = -10.0
offset_top = -27.0
offset_right = 386.0
offset_bottom = 1109.0
mouse_filter = 2
color = Color(0.22670761, 0.22670746, 0.22670746, 1)

[node name="ActualDecoration" type="ColorRect" parent="LeftMenuBar"]
show_behind_parent = true
z_index = 1
layout_mode = 0
offset_left = 397.0
offset_top = 24.0
offset_right = 413.0
offset_bottom = 1160.0
mouse_filter = 2
color = Color(0, 0, 0, 0.29803923)

[node name="ShadowDecoration" type="ColorRect" parent="LeftMenuBar"]
show_behind_parent = true
z_index = 1
layout_mode = 0
offset_left = 388.0
offset_right = 397.0
offset_bottom = 1136.0
mouse_filter = 2
color = Color(0.7569886, 0.53034824, 0.14240357, 1)

[node name="Panel" type="ColorRect" parent="LeftMenuBar"]
show_behind_parent = true
z_index = 1
layout_mode = 0
offset_left = 18.0
offset_top = 41.0
offset_right = 378.0
offset_bottom = 454.0
mouse_filter = 2
color = Color(0.16565654, 0.16565633, 0.16565648, 1)

[node name="Shadow" type="ColorRect" parent="LeftMenuBar/Panel"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = 6.0
offset_right = 366.0
offset_bottom = 420.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Graphs" type="ColorRect" parent="LeftMenuBar"]
show_behind_parent = true
z_index = 1
layout_mode = 0
offset_left = 18.0
offset_top = 472.0
offset_right = 378.0
offset_bottom = 1096.0
mouse_filter = 2
color = Color(0.16565654, 0.16565633, 0.16565648, 1)

[node name="Shadow" type="ColorRect" parent="LeftMenuBar/Graphs"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = 6.0
offset_right = 366.0
offset_bottom = 632.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="BottomGraph" type="ColorRect" parent="LeftMenuBar/Graphs"]
show_behind_parent = true
z_index = 1
layout_mode = 0
offset_left = 10.0
offset_top = 97.0
offset_right = 348.0
offset_bottom = 350.0
mouse_filter = 2
color = Color(0.11858133, 0.11858139, 0.11858136, 1)

[node name="Panel4" type="ColorRect" parent="LeftMenuBar/Graphs/BottomGraph"]
show_behind_parent = true
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 344.0
offset_bottom = 259.0
mouse_filter = 2
color = Color(0.103743605, 0.103743516, 0.103743516, 1)

[node name="TopGraph" type="ColorRect" parent="LeftMenuBar/Graphs"]
show_behind_parent = true
z_index = 1
layout_mode = 0
offset_left = 17.0
offset_top = 371.0
offset_right = 355.0
offset_bottom = 624.0
mouse_filter = 2
color = Color(0.11858133, 0.11858139, 0.11858136, 1)

[node name="Panel4" type="ColorRect" parent="LeftMenuBar/Graphs/TopGraph"]
show_behind_parent = true
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 344.0
offset_bottom = 259.0
mouse_filter = 2
color = Color(0.103743605, 0.103743516, 0.103743516, 1)

[node name="Control" type="Control" parent="LeftMenuBar/Graphs/TopGraph"]
anchors_preset = 0
offset_left = -13.0
offset_top = 2.0
offset_right = 340.0
offset_bottom = 262.0

[node name="GameNumber" type="Label" parent="LeftMenuBar/Graphs"]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -295.0
offset_right = -46.0
offset_bottom = -235.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 41
text = "Game"
label_settings = SubResource("LabelSettings_kegfm")
horizontal_alignment = 1
script = ExtResource("4_fqy1j")

[node name="Panel" type="ColorRect" parent="LeftMenuBar/Graphs/GameNumber"]
show_behind_parent = true
z_index = 3
z_as_relative = false
layout_mode = 0
offset_left = -46.0
offset_top = -10.0
offset_right = 302.0
offset_bottom = 54.0
mouse_filter = 2
color = Color(0.27232337, 0.28022948, 0.27254915, 1)

[node name="Shadow" type="ColorRect" parent="LeftMenuBar/Graphs/GameNumber"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = -41.0
offset_top = -5.0
offset_right = 307.0
offset_bottom = 59.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Wins" type="Label" parent="LeftMenuBar/Graphs"]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -293.0
offset_right = -140.0
offset_bottom = -233.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 41
text = "Game"
label_settings = SubResource("LabelSettings_kegfm")
horizontal_alignment = 1
script = ExtResource("5_k58ic")

[node name="Panel" type="ColorRect" parent="LeftMenuBar/Graphs/Wins"]
show_behind_parent = true
z_index = 3
z_as_relative = false
layout_mode = 0
offset_left = 79.0
offset_top = -10.0
offset_right = 179.0
offset_bottom = 54.0
mouse_filter = 2
color = Color(1.1551381e-06, 0.6932462, 0.22095573, 1)

[node name="Shadow" type="ColorRect" parent="LeftMenuBar/Graphs/Wins"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = 83.0
offset_top = -5.0
offset_right = 183.0
offset_bottom = 59.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Losses" type="Label" parent="LeftMenuBar/Graphs"]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 142.0
offset_top = -293.0
offset_right = 41.0
offset_bottom = -233.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 41
text = "Game"
label_settings = SubResource("LabelSettings_kegfm")
horizontal_alignment = 1
script = ExtResource("6_mnx84")

[node name="Panel" type="ColorRect" parent="LeftMenuBar/Graphs/Losses"]
show_behind_parent = true
z_index = 3
z_as_relative = false
layout_mode = 0
offset_left = 80.0
offset_top = -10.0
offset_right = 180.0
offset_bottom = 54.0
mouse_filter = 2
color = Color(0.99607843, 0.29803923, 0.24705882, 1)

[node name="Shadow" type="ColorRect" parent="LeftMenuBar/Graphs/Losses"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = 85.0
offset_top = -5.0
offset_right = 185.0
offset_bottom = 59.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Ties" type="Label" parent="LeftMenuBar/Graphs"]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -295.0
offset_right = -46.0
offset_bottom = -235.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 41
text = "Game"
label_settings = SubResource("LabelSettings_kegfm")
horizontal_alignment = 1
script = ExtResource("7_21bi7")

[node name="Panel" type="ColorRect" parent="LeftMenuBar/Graphs/Ties"]
show_behind_parent = true
z_index = 3
z_as_relative = false
layout_mode = 0
offset_left = -46.0
offset_top = -10.0
offset_right = 302.0
offset_bottom = 54.0
mouse_filter = 2
color = Color(0.27232337, 0.28022948, 0.27254915, 1)

[node name="Shadow" type="ColorRect" parent="LeftMenuBar/Graphs/Ties"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = -41.0
offset_top = -5.0
offset_right = 307.0
offset_bottom = 59.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Label" type="Label" parent="LeftMenuBar"]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 185.0
offset_top = -74.0
offset_right = -43.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 41
text = "X"
label_settings = SubResource("LabelSettings_bwecg")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_top = -3.0
offset_right = 1923.0
offset_bottom = 1079.0
texture = ExtResource("2_1jfn3")

[node name="betLabel" type="Label" parent="Background"]
z_index = 100
layout_mode = 0
offset_left = 3.0
offset_top = 620.0
offset_right = 393.0
offset_bottom = 660.0
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "Current bet: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.81927085
anchor_top = 0.103703424
anchor_right = 0.94270784
anchor_bottom = 0.5925925
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 2

[node name="Autoplay" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "AUTOPLAY"

[node name="OptimalMove" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "OPTIMAL

MOVE
"

[node name="Hit" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "HIT"

[node name="Stand" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "STAND"

[node name="Cards" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.145
anchor_right = 0.843
anchor_bottom = 0.98
offset_left = -0.400024
offset_top = -2.0
offset_right = 1383.44
offset_bottom = 1109.6
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_top = 45
theme_override_constants/margin_bottom = 45

[node name="Hands" type="VBoxContainer" parent="Cards"]
layout_mode = 2
theme_override_constants/separation = 630
alignment = 2

[node name="DealerHand" type="HBoxContainer" parent="Cards/Hands"]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="PlayerHand" type="HBoxContainer" parent="Cards/Hands"]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="DealerScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -127.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 30
label_settings = ExtResource("4_kegfm")
horizontal_alignment = 1

[node name="PlayerScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 79.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 30
label_settings = ExtResource("4_kegfm")
horizontal_alignment = 1

[node name="NumberBar" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 512
visibility_layer = 512
layout_mode = 0
offset_left = 889.0
offset_top = -27.0
offset_right = 1031.0
offset_bottom = 1100.0
mouse_filter = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[node name="NumberBar2" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 512
visibility_layer = 512
layout_mode = 0
offset_left = 848.0
offset_top = 491.0
offset_right = 1083.0
offset_bottom = 587.0
mouse_filter = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="PlayerHitMarker" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 91.0
offset_top = 900.0
offset_right = 69.64
offset_bottom = 816.92
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 80
text = "hit!"

[node name="DealerHitMarker" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.083
anchor_bottom = 0.151
offset_left = 91.0
offset_top = 100.0
offset_right = 69.64
offset_bottom = 16.920502
theme_override_colors/font_color = Color(0.490196, 1, 0.454902, 1)
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 80
text = "hit!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "HitAnimationD"

[node name="WhoseTurn" type="Label" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -509.0
offset_right = -1518.0
offset_bottom = -377.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 41
text = "Player's Turn"
label_settings = SubResource("LabelSettings_m3mv0")
horizontal_alignment = 1

[node name="Panel" type="ColorRect" parent="WhoseTurn"]
show_behind_parent = true
z_index = 3
z_as_relative = false
layout_mode = 0
offset_left = 35.0
offset_top = -10.0
offset_right = 383.0
offset_bottom = 54.0
mouse_filter = 2
color = Color(0.75686276, 0.5294118, 0.14117648, 1)

[node name="Shadow" type="ColorRect" parent="WhoseTurn"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = 40.0
offset_top = -5.0
offset_right = 388.0
offset_bottom = 59.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="WinnerText" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 78.0
offset_top = 440.0
offset_right = 1312.0
offset_bottom = 635.0
theme_override_colors/font_color = Color(0.431373, 1, 0.403922, 1)
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 60
text = "PLAYER
WINS"
vertical_alignment = 1

[node name="Replay" type="Button" parent="."]
layout_mode = 0
offset_left = 754.0
offset_top = 491.0
offset_right = 1162.0
offset_bottom = 579.0
theme_override_constants/h_separation = 9
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 40
text = "Play Again"
alignment = 0

[node name="Exit" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 48.0
offset_top = 328.0
offset_right = 341.0
offset_bottom = 406.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9555307, 0.95068866, 0.9469866, 1)
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 25
text = "Change Bet"

[node name="BankBalance" type="Label" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 63.0
offset_top = -427.0
offset_right = 56.0
offset_bottom = -247.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
theme_override_font_sizes/font_size = 35
text = "BALANCE"
label_settings = SubResource("LabelSettings_387hk")

[node name="Panel" type="ColorRect" parent="BankBalance"]
show_behind_parent = true
z_index = 3
z_as_relative = false
layout_mode = 0
offset_left = -46.0
offset_top = -10.0
offset_right = 302.0
offset_bottom = 197.0
mouse_filter = 2
color = Color(0.4853196, 0.33334464, 0.07247136, 1)

[node name="Shadow" type="ColorRect" parent="BankBalance"]
show_behind_parent = true
z_index = 2
z_as_relative = false
layout_mode = 0
offset_left = -41.0
offset_top = -5.0
offset_right = 307.0
offset_bottom = 204.0
mouse_filter = 2
color = Color(0, 0, 0, 0.39215687)

[node name="BalanceValue" type="Label" parent="BankBalance"]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -18.0
offset_right = -1623.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sviuc")
label_settings = SubResource("LabelSettings_e65rd")
horizontal_alignment = 2
script = ExtResource("8_bwecg")

[node name="Arrow" type="TextureRect" parent="BankBalance"]
z_index = 6
z_as_relative = false
texture_filter = 1
layout_mode = 0
offset_left = -52.0
offset_top = 45.0
offset_right = 73.0
offset_bottom = 170.0
texture = ExtResource("6_e65rd")
script = ExtResource("13_mnx84")

[node name="Shadow" type="TextureRect" parent="BankBalance/Arrow"]
modulate = Color(0, 0, 0, 0.39215687)
z_index = 5
z_as_relative = false
texture_filter = 1
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("6_e65rd")

[node name="Dialogue" type="ColorRect" parent="."]
z_index = 10
layout_mode = 0
offset_left = 407.0
offset_top = 825.0
offset_right = 1536.0
offset_bottom = 1029.0
color = Color(0, 0, 0, 0.88235295)

[node name="PersonName" type="ColorRect" parent="Dialogue"]
z_index = 10
layout_mode = 0
offset_top = -91.0
offset_right = 253.0
offset_bottom = -31.0
color = Color(0, 0, 0, 0.88235295)

[node name="Label" type="Label" parent="Dialogue/PersonName"]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -24.0
offset_right = -34.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 41
text = "Dealer"
label_settings = SubResource("LabelSettings_bwecg")

[node name="Message" type="RichTextLabel" parent="Dialogue"]
z_index = 5
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -87.0
offset_right = -34.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_dl2ym")
theme_override_font_sizes/normal_font_size = 43
text = "You like what you see? You like what you see? You like what you see? You like what you see? You like what you see? You like what you see?"

[node name="DealerFrame" type="ColorRect" parent="Dialogue"]
z_index = 10
layout_mode = 0
offset_left = 876.0
offset_top = -287.0
offset_right = 1129.0
offset_bottom = -31.0
color = Color(0, 0, 0, 0.88235295)

[node name="TextureRect" type="TextureRect" parent="Dialogue/DealerFrame"]
texture_filter = 1
layout_mode = 0
offset_top = -6.0
offset_right = 253.0
offset_bottom = 256.0
texture = ExtResource("8_m3mv0")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 1770.0
offset_right = 1926.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2_dl2ym")
theme_override_font_sizes/font_size = 20
text = "Quit"

[connection signal="pressed" from="Buttons/VBoxContainer/Autoplay" to="." method="_on_autoplay_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/OptimalMove" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Hit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Stand" to="." method="_on_stand_pressed"]
[connection signal="pressed" from="Replay" to="." method="_on_replay_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
